--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.4.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "parser": "^0.1.4",
-    "prisma": "^6.3.1"
+    "parser": "^0.1.4"
+  },
+  "devDependencies": {
+    "prisma": "^6.4.1"
   }
 }
